--- a/singleConnectedList.ipynb
+++ b/singleConnectedList.ipynb
@@ -76,10 +76,12 @@
     "        if self.length() - 1 < id:\n",
     "            return False\n",
     "        \n",
-    "        if id == 0:\n",
+    "        if id == 0 and self.head.next == None: # если всего один элемент\n",
+    "            self.head = None\n",
+    "        elif id == 0:\n",
     "            self.head = self.head.next\n",
     "            return True\n",
-    "        \n",
+    "\n",
     "        prev = self.head\n",
     "        current_id = 0\n",
     "        current = self.head.next\n",
